--- a/Financial risk specialist my job website/index.html
+++ b/Financial risk specialist my job website/index.html
@@ -87,12 +87,14 @@
 
     <h3>etc.</h3>
     <p>more information on finanical risk specialists can be found at ziprecruiter.techtarget.com, myplan.com, and indeed.com</p>
+    <h3>Why someone may like this job</h3>
+    <p>Someone might like ot pursue this career because it allows them to combine some of their favorite things, such as data, puzzles, and predictions, and use it in the real world.</p>
     
     </section>
     <div class="pimg1">
         <div class="ptext">
             <span class="border">
-                <a href="#">Financial risk Specialist</a>
+                <a href="#">Financial Risk Specialist</a>
             </span>
         </div>
     </div>
